<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_revenue"
            android:icon="@drawable/ic_revenue"
            android:title="@string/revenue" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_expenses"
            android:title="@string/expenses" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_accounts"
            android:title="@string/accounts" />
        <item
            android:id="@+id/nav_account_resume"
            android:icon="@drawable/ic_resume"
            android:title="@string/account_resume" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

</menu>
