<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginTop="40sp"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="35sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">
        <TextView
            android:id="@+id/monthly_payment"
            android:text="@string/monthly_payment"
            style="@style/textIndexDesign"/>
        <EditText
            android:layout_below="@+id/monthly_payment"
            android:id="@+id/monthly_payment_box"
            style="@style/boxIndexDesign"/>
        <TextView
            android:id="@+id/acum_money"
            android:layout_below="@id/monthly_payment_box"
            android:text="@string/acum_money"
            style="@style/textIndexDesign"/>
        <EditText
            android:layout_below="@+id/acum_money"
            android:id="@+id/acum_money_box"
            style="@style/boxIndexDesign"/>
        <TextView
            android:id="@+id/total_acum"
            android:layout_below="@+id/acum_money_box"
            android:text="@string/total_acum"
            style="@style/textIndexDesign"/>
        <EditText
            android:id="@+id/total_acum_box"
            android:layout_below="@+id/total_acum"
            style="@style/boxIndexDesign"/>
        <TextView
            android:id="@+id/level_rich"
            android:layout_below="@+id/total_acum_box"
            android:text="@string/level_rich"
            style="@style/textIndexDesign"/>
        <EditText
            android:id="@+id/level_rich_box"
            android:layout_below="@+id/level_rich"
            style="@style/boxIndexDesign"/>
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:id="@+id/level_rich_text"
            android:textSize="10sp"
            android:text="@string/level_rich_msj"
            android:layout_below="@id/level_rich_box"
            android:layout_alignRight="@+id/acum_money"
            android:gravity="center"
            android:layout_alignEnd="@+id/acum_money"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</RelativeLayout>